# aiohttp-zip-response

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
aiohttp_zip_response/: __init__.py  zip_response.py
tests/: conftest.py  smoke_test.py  test_zip_response.py
