[project]
name = "aiohttp-zip-response"
version = "2.4.0"
description = "A AIOHTTP response class streaming a directory as ZIP archive"
authors = [{ name = "Jonathan Ehwald", email = "github@ehwald.info" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = ["aiohttp (>=3.9.5,<4.0)", "stream-zip (>=0.0.83,<0.1.0)"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/DoctorJohn/aiohttp-zip-response"
repository = "https://github.com/DoctorJohn/aiohttp-zip-response"
documentation = "https://github.com/DoctorJohn/aiohttp-zip-response"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-randomly>=3.16.0",
    "ruff>=0.11.6",
]

[tool.hatch.build.targets.wheel]
packages = ["aiohttp_zip_response"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=aiohttp_zip_response --cov-report term-missing --cov-report html"

[tool.mypy]
check_untyped_defs = true
