[project]
name = "aiohttp-zip-response"
version = "2.4.0"
description = "A AIOHTTP response class streaming a directory as ZIP archive"
authors = [{ name = "Jonathan Ehwald", email = "github@ehwald.info" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = ["aiohttp (>=3.9.5,<4.0)", "stream-zip (>=0.0.83,<0.1.0)"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
homepage = "https://github.com/DoctorJohn/aiohttp-zip-response"
repository = "https://github.com/DoctorJohn/aiohttp-zip-response"
documentation = "https://github.com/DoctorJohn/aiohttp-zip-response"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "prek>=0.2.29",
    "pytest>=8.3.5",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-randomly>=3.16.0",
    "ruff>=0.11.6",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=aiohttp_zip_response --cov-report term-missing --cov-report html"

[tool.mypy]
check_untyped_defs = true
